# carve

./: .gitignore  CLAUDE.md  Makefile  PREREGISTRATION.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: BRIEF.md  BUILD_ORDER.md  DATASETS.md  EXECUTION_PLAN.md  INTEGRITY.md  LOG.md  METRICS.md  NOVELTY.md  PAPER_DRAFT.md  PROGRESS.md  RELATED_WORK.md  related_work_draft.md
docs/figures/: README.md
experiments/: README.md
scripts/: 01_smoke_test.py  02_monet_hook_probe.py  10_inject.py  20_make_artifact_examples.py  21_overlay_examples.py  30_train_sae.py  31_sae_health_sweep.py  40_run_interventions.py  41_rho_alpha_sweep.py  42_effect_dimensionality.py  43_layer_robustness.py  50_baselines.py  60_figures.py  run_new_artifact_grid.sh
src/carve/: __init__.py  utils.py
src/carve/baselines/: __init__.py  cav.py  dermfmzero_suppress.py  input_oracle.py  random_ctrl.py  raw_neuron.py
src/carve/data/: __init__.py  artifacts.py  datasets.py  isic.py
src/carve/eval/: __init__.py  aggregate.py  figures.py  grid.py  harness.py
src/carve/interventions/: __init__.py  hooks.py  mediation.py
src/carve/metrics/: __init__.py  causal.py  stats.py
src/carve/models/: __init__.py  encoders.py  probe.py
src/carve/sae/: __init__.py  discovery.py  load_sae.py  model.py  train_sae.py
tests/: test_baselines.py  test_encoders.py  test_figures.py  test_grid.py  test_injection.py  test_interventions.py  test_isic.py  test_metrics.py  test_sae.py  test_smoke.py  test_splits.py
